# mona-camera-dropbox-repro

./: .gitignore  README.md  pyproject.toml
approval_spectrum/: __init__.py  configs.py  metrics.py  oracle.py  overseers.py  plotting.py  ppo_training.py  runner.py
experiments/approval_spectrum/: __init__.py  run_learned_approval_suite.py  run_ppo_reproduction.py  run_public_reproduction.py
mona/: __init__.py  reproduction.py
mona/proto/: BUILD.bazel  __init__.py  rollout.proto  rollout_pb2.py
mona/src/: BUILD.bazel  __init__.py  block_push_env.py  block_push_env_test.py  block_push_gym_env.py  block_push_gym_env_test.py  data.py  file_handler.py  file_system.py  main.py  matrix_constructor.py  matrix_constructor_test.py  policy_constructor.py  policy_constructor_test.py  rollout_handler.py  rollout_handler_test.py  runner.py  runner_test.py  state.py  state_test.py  train.py  train_test.py
notebooks/upstream/: analysis.ipynb  ppo.ipynb
reports/: mona_learned_approval_report.md  public_reproduction_notes.md
tests/: test_oracle_and_overseers.py  test_ppo_training.py  test_public_train.py
