[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mona-camera-dropbox-repro"
version = "0.1.0"
description = "Python-first reproduction of the public MONA Camera Dropbox experiments"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Codernate92 contributors"}]
dependencies = [
  "absl-py>=2.1.0",
  "frozendict>=2.4.6",
  "numpy>=2.2.1",
  "protobuf>=5.29.3",
  "sympy>=1.13.3",
]

[project.optional-dependencies]
dev = [
  "grpcio-tools>=1.71.0",
  "pytest>=8.3.4",
]

[tool.setuptools.packages.find]
include = ["mona*", "experiments*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
