load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_python//python:proto.bzl", "py_proto_library")

package(default_visibility = ["//:__subpackages__"])

proto_library(
    name = "rollout_proto",
    srcs = ["rollout.proto"],
)

py_proto_library(
    name = "rollout_py_pb2",
    deps = [":rollout_proto"],
)
